Bug 22941 - If the documentElement does not paint opaquely, then stuff from the previous page shows through
Summary: If the documentElement does not paint opaquely, then stuff from the previous ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac OS X 10.5
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-19 15:04 PST by Simon Fraser (smfr)
Modified: 2008-12-23 21:23 PST (History)
0 users

See Also:


Attachments
Testcase (829 bytes, text/html)
2008-12-19 15:04 PST, Simon Fraser (smfr)
no flags Details
Patch, testcase, changelog (6.34 KB, patch)
2008-12-23 19:35 PST, Simon Fraser (smfr)
mitz: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2008-12-19 15:04:13 PST
If the document element has opacity or has a background color with alpha, then stale pixels in the viewport can show through.
Comment 1 Simon Fraser (smfr) 2008-12-19 15:04:56 PST
Created attachment 26162 [details]
Testcase

Testcase.

Fix should be similar to bug 22938.
Comment 2 Simon Fraser (smfr) 2008-12-19 15:08:53 PST
Actually, the problem does not occur with background-color. Only opacity seems to be problematic.
Comment 3 Simon Fraser (smfr) 2008-12-23 19:35:34 PST
Created attachment 26231 [details]
Patch, testcase, changelog
Comment 4 Simon Fraser (smfr) 2008-12-23 21:23:59 PST
Committing to http://svn.webkit.org/repository/webkit/trunk ...
	M	LayoutTests/ChangeLog
	A	LayoutTests/fast/backgrounds/opacity-on-document-element.html
	M	LayoutTests/fast/transforms/identity-matrix.html
	A	LayoutTests/platform/mac/fast/backgrounds/opacity-on-document-element-expected.checksum
	A	LayoutTests/platform/mac/fast/backgrounds/opacity-on-document-element-expected.png
	A	LayoutTests/platform/mac/fast/backgrounds/opacity-on-document-element-expected.txt
	M	LayoutTests/platform/mac/fast/transforms/identity-matrix-expected.txt
	M	WebCore/ChangeLog
	M	WebCore/rendering/RenderView.cpp
Committed r39463