2008-12-23  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=22941

        If the document element has opacity, we need to erase the view background to
        white before painting.

        Test: fast/backgrounds/opacity-on-document-element.html

        * rendering/RenderView.cpp:
        (WebCore::rendererObscuresBackground):

Canonical link: https://commits.webkit.org/31662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39463 268f45cc-cd09-0410-ab3c-d52691b4dbfc